--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Architect theme
-description: Architect is a theme for GitHub Pages.
+title: Oneline Speculative Decoding
+description:
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
