--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,4 +2,6 @@ title: Online Speculative Decoding
 description:
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-architect
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
