--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Online Speculative Decoding
+author: Xiaoxuan Liu, Lanxiang Hu, Peter Bailis, Ion Stoica, Zhijie Deng, Alvin Cheung, Hao Zhang
 description:
 show_downloads: true
 google_analytics:
